# RustEpubReader

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  STATUS_MIGRATION.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_report.yml
.github/workflows/: android-build.yml  build.yml  ci.yml  desktop-build.yml  issue-assistant.yml  pr-review.yml  release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-bridge/src/: lib.rs
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/java/com/epub/reader/: MainActivity.kt
android/app/src/main/java/com/epub/reader/csc/: CscNativeLoader.kt
android/app/src/main/java/com/epub/reader/model/: Models.kt
android/app/src/main/java/com/epub/reader/ui/reader/: ContentBlockView.kt  PageModeContent.kt  PaginationUtils.kt  ReaderBars.kt  ReaderScreen.kt  ReaderSettingsSheet.kt  ReviewPanel.kt  ScrollModeContent.kt  SelectionToolbar.kt  TextRenderUtils.kt
android/app/src/main/java/com/epub/reader/viewmodel/: ReaderViewModel.kt
android/pagecurl/src/main/kotlin/eu/wewox/pagecurl/page/: PageCurlState.kt
android/pagecurl/src/main/kotlin/eu/wewox/pagecurl/utils/: MathUtils.kt
core/: Cargo.toml
core/src/: export.rs  lib.rs  library.rs  search.rs
core/src/csc/: mod.rs  model.rs  plugin.rs  tokenizer.rs
core/src/epub/: chapter.rs  parser.rs
core/src/epub/parser/: html.rs  mod.rs
core/src/i18n/: en.json  zh_cn.json
core/src/sharing/: crypto.rs  discovery.rs  mod.rs  peer.rs  protocol.rs
desktop/: Cargo.toml
desktop/src/: app.rs  main.rs  self_update.rs
desktop/src/ui/: about.rs  annotations.rs  csc_contribute.rs  csc_settings.rs  github_oauth.rs  library.rs  mod.rs  reader.rs  reader_block.rs  reader_state.rs  review_panel.rs  search.rs  settings_new.rs  toolbar.rs  tts.rs
