[package]
name = "reader_core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
keychain = ["keyring"]
# CSC dynamic-plugin client side. Pulls in `libloading` only (~50 KB binary cost).
# The actual ONNX inference engine is downloaded separately at runtime
# from the RustEpubReader-Model repo.
csc = ["libloading"]

[dependencies]
rbook = { version = "0.7.6", default-features = false }
scraper = "0.21"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem", "sha2"] }
rand = "0.8"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", optional = true }
# TXT-to-EPUB
chardetng = "0.1"
encoding_rs = "0.8"
epub-builder = "0.7"
regex = "1"
thiserror = "2"
# CSC dynamic plugin loader
libloading = { version = "0.8", optional = true }
