[package]
name = "rust_epub_reader"
version.workspace = true
edition = "2021"

[dependencies]
reader_core = { path = "../core", features = ["keychain"] }
eframe = "0.31"
rfd = "0.15"
image = "0.25"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
