[package]
name = "rust_epub_reader"
version.workspace = true
edition = "2021"

[dependencies]
reader_core = { path = "../core", features = ["keychain"] }
eframe = "0.31"
rfd = "0.15"
image = "0.25"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
# self-update
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
open = "5"
urlencoding = "2"
msedge-tts = "0.3"
rodio = "0.20"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = ["csc"]
csc = ["reader_core/csc"]
vendored-openssl = ["openssl/vendored"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
